--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,134 +1,23 @@
-/* CODE HAUTEUR LARGEUR PRIORITE SEMANTIQUE */
-body {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    /* font-family: 'Bahnschrift', cursive; */
-    font-family: 'Lucida Sans Regular',sans-serif;
-}
-
-footer{
-    width:100%;
-    height: 15vh;
-}
-
-header{
-    height: 40vh;
-    width: 100%;
-}
-
-main{
-    width: 100%;
-    min-height: 45vh;
-}
-
-section{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-}
-/* *********************************** */
-
-.imgSize{
-    width: 300px;
-    height: 150px;
-}
-
-.iconeSize{
-    width: 30px;
-    height: 30px;;
-}
-
-.btn-login {
-    font-size: 0.9rem;
-    letter-spacing: 0.05rem;
-    padding: 0.75rem 1rem;
-  }
-  
-
-  /* BOUTON RESERVATION */
-  .hoverButton div {
-    --c: #f03f9d;
-    color: #f03f9d;
-    font-size: 16px;
-    border: 0.3em solid var(--c);
-    border-radius: 0.5em;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-family: sans-serif;
-    letter-spacing: 0.1em;
-    text-align: center;
-    line-height: 3em;
-    overflow: hidden;
-    transition: 0.5s;
-    margin: 1em;
-}
-
-.btn:hover{
-    background-color: #ee71b3;
-}
-
-
-.hoverButton div:hover {
-    color: white;
-    background-color:   #f03f9d;;
-}
-
-.imgFake{
-    width: 250px;
-    height: 250px;
-}
-
-.full{
-    border: #f03f9d;
-}
-/* *********************************** */
-
-
-
-
-
-/* FORM CONTACT */
-.form_container {
-    margin-top: 100px;
-}
-.login_btn {
-    width: 100%;
-    background: #f03f9d !important;
-    color: white !important;
-}
-.login_btn:focus {
-    box-shadow: none !important;
-    outline: 0px !important;
-}
-.login_container {
-    padding: 0 2rem;
-}
-.input-group-text {
-    background: #f03f9d !important;
-    color: white !important;
-    border: 0 !important;
-    border-radius: 0.25rem 0 0 0.25rem !important;
-}
-.input_user,
-.input_pass:focus {
-    box-shadow: none !important;
-    outline: 0px !important;
-}
-.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
-    background-color: #c0392b !important;
-}
-
-/* FIN FORM CONTACT */
-
-.eyeStyle{
-    cursor: pointer;
-    font-size: x-large;
-    opacity: 50%;
-}
-
-.eyeStyle:hover{
-    opacity: 100%;
-    font-size: 23px;
-    transition: all 0.2s;
-}
+body{box-sizing:border-box;margin:0;padding:0;font-family:'Lucida Sans Regular',sans-serif}
+footer{width:100%;height:15vh}
+header{height:40vh;width:100%}
+main{width:100%;min-height:45vh}
+section{display:flex;justify-content:center;text-align:center}
+a{text-decoration:none}
+.imgSize{width:300px;height:150px}
+.iconeSize{width:30px;height:30px}
+.btn-login{font-size:.9rem;letter-spacing:.05rem;padding:.75rem 1rem}
+.hoverButton div{--c:#f03f9d;color:#f03f9d;font-size:16px;border:.3em solid var(--c);border-radius:.5em;text-transform:uppercase;font-weight:700;font-family:sans-serif;letter-spacing:.1em;text-align:center;line-height:3em;overflow:hidden;transition:.5s;margin:1em}
+.btn:hover{background-color:#ee71b3}
+.hoverButton div:hover{color:#fff;background-color:#f03f9d}
+.imgFake{width:250px;height:250px}
+.full{border:#f03f9d}
+.form_container{margin-top:100px}
+.login_btn{width:100%;background:#f03f9d!important;color:#fff!important}
+.login_btn:focus{box-shadow:none!important;outline:0!important}
+.login_container{padding:0 2rem}
+.input-group-text{background:#f03f9d!important;color:#fff!important;border:0!important;border-radius:.25rem 0 0 .25rem!important}
+.input_pass:focus,.input_user{box-shadow:none!important;outline:0!important}
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before{background-color:#c0392b!important}
+.eyeStyle{cursor:pointer;font-size:x-large;opacity:50%}
+.eyeStyle:hover{opacity:100%;font-size:23px;transition:all .2s}
