--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,6 +14,7 @@ a{text-decoration:none}
 .full{border:#f03f9d}
 .form_container{margin-top:100px}
 .login_btn{width:100%;background:#f03f9d!important;color:#fff!important}
+.login_btn:hover{box-shadow:none!important;outline:0!important;background:#f561b0!important}
 .login_btn:focus{box-shadow:none!important;outline:0!important}
 .login_container{padding:0 2rem}
 .input-group-text{background:#f03f9d!important;color:#fff!important;border:0!important;border-radius:.25rem 0 0 .25rem!important}
