--- a/public/assets/css/nav.css
+++ b/public/assets/css/nav.css
@@ -1,218 +1,70 @@
-.nav {
-    width: 100%;
-    height: 25px;
-    position: fixed;
-    line-height: 65px;
-    text-align: center;
-    z-index: 7;
+.nav{width:100%;height:25px;position:fixed;line-height:65px;text-align:center;z-index:7}
+.nav div.logo{float:left;width:auto;height:auto;padding-left:3rem}
+.nav div.logo a{text-decoration:none;color:#fff;font-size:1rem}
+.nav div.logo a:hover{color:#8a8d8b}
+.nav div.main_list{height:65px;float:right}
+.nav div.main_list ul{width:100%;height:65px;display:flex;list-style:none;margin:0;padding:0}
+.nav div.main_list ul li{width:auto;height:65px;padding:0;padding-right:3rem}
+.nav div.main_list ul li a{text-decoration:none;color:#080808;line-height:65px;font-size:1.5rem}
+.nav div.main_list ul li a:hover{color:#8a8d8b}
+.nav{padding-top:20px;padding-bottom:20px;-webkit-transition:all .4s ease;transition:all .4s ease}
+@media screen and (max-width:768px){
+.nav div.main_list ul li a{text-decoration:none;color:#080808;line-height:65px;font-size:1.5rem}
 }
-
-.nav div.logo {
-    float: left;
-    width: auto;
-    height: auto;
-    padding-left: 3rem;
+@-webkit-keyframes inM{
+50%{-webkit-transform:rotate(0)}
+100%{-webkit-transform:rotate(45deg)}
 }
-
-.nav div.logo a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 1rem;
+@keyframes inM{
+50%{transform:rotate(0)}
+100%{transform:rotate(45deg)}
 }
-
-.nav div.logo a:hover {
-    color: #8a8d8b;
+@-webkit-keyframes outM{
+50%{-webkit-transform:rotate(0)}
+100%{-webkit-transform:rotate(45deg)}
 }
-
-.nav div.main_list {
-    height: 65px;
-    float: right;
+@keyframes outM{
+50%{transform:rotate(0)}
+100%{transform:rotate(45deg)}
 }
-
-.nav div.main_list ul {
-    width: 100%;
-    height: 65px;
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+@-webkit-keyframes inT{
+0%{-webkit-transform:translateY(0) rotate(0)}
+50%{-webkit-transform:translateY(9px) rotate(0)}
+100%{-webkit-transform:translateY(9px) rotate(135deg)}
 }
-
-.nav div.main_list ul li {
-    width: auto;
-    height: 65px;
-    padding: 0;
-    padding-right: 3rem;
+@keyframes inT{
+0%{transform:translateY(0) rotate(0)}
+50%{transform:translateY(9px) rotate(0)}
+100%{transform:translateY(9px) rotate(135deg)}
 }
-
-.nav div.main_list ul li a {
-    text-decoration: none;
-    color: #080808;
-    line-height: 65px;
-    font-size: 1.5rem;
+@-webkit-keyframes outT{
+0%{-webkit-transform:translateY(0) rotate(0)}
+50%{-webkit-transform:translateY(9px) rotate(0)}
+100%{-webkit-transform:translateY(9px) rotate(135deg)}
 }
-
-.nav div.main_list ul li a:hover {
-    color: #8a8d8b;
+@keyframes outT{
+0%{transform:translateY(0) rotate(0)}
+50%{transform:translateY(9px) rotate(0)}
+100%{transform:translateY(9px) rotate(135deg)}
 }
-
-.nav {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    -webkit-transition: all 0.4s ease;
-    transition: all 0.4s ease;
+@-webkit-keyframes inBtm{
+0%{-webkit-transform:translateY(0) rotate(0)}
+50%{-webkit-transform:translateY(-9px) rotate(0)}
+100%{-webkit-transform:translateY(-9px) rotate(135deg)}
 }
-
-
-/* Media qurey section */
-
-@media screen and (max-width:768px) {
-    .nav div.main_list ul li a {
-        text-decoration: none;
-        color: #080808;
-        line-height: 65px;
-        font-size: 1.5rem;
-    }
-    
+@keyframes inBtm{
+0%{transform:translateY(0) rotate(0)}
+50%{transform:translateY(-9px) rotate(0)}
+100%{transform:translateY(-9px) rotate(135deg)}
 }
-
-
-/* Animation */
-
-
-@-webkit-keyframes inM {
-    50% {
-        -webkit-transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(45deg);
-    }
+@-webkit-keyframes outBtm{
+0%{-webkit-transform:translateY(0) rotate(0)}
+50%{-webkit-transform:translateY(-9px) rotate(0)}
+100%{-webkit-transform:translateY(-9px) rotate(135deg)}
 }
-
-@keyframes inM {
-    50% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(45deg);
-    }
+@keyframes outBtm{
+0%{transform:translateY(0) rotate(0)}
+50%{transform:translateY(-9px) rotate(0)}
+100%{transform:translateY(-9px) rotate(135deg)}
 }
-
-@-webkit-keyframes outM {
-    50% {
-        -webkit-transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(45deg);
-    }
-}
-
-@keyframes outM {
-    50% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(45deg);
-    }
-}
-
-@-webkit-keyframes inT {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(9px) rotate(135deg);
-    }
-}
-
-@keyframes inT {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(9px) rotate(135deg);
-    }
-}
-
-@-webkit-keyframes outT {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(9px) rotate(135deg);
-    }
-}
-
-@keyframes outT {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(9px) rotate(135deg);
-    }
-}
-
-@-webkit-keyframes inBtm {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(-9px) rotate(135deg);
-    }
-}
-
-@keyframes inBtm {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(-9px) rotate(135deg);
-    }
-}
-
-@-webkit-keyframes outBtm {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(-9px) rotate(135deg);
-    }
-}
-
-@keyframes outBtm {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(-9px) rotate(135deg);
-    }
-}
-
-.affix {
-    padding: 0;
-    background-color: #111;
-}
+.affix{padding:0;background-color:#111}
