--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -22,6 +22,15 @@ a{text-decoration:none}
 .custom-checkbox .custom-control-input:checked~.custom-control-label::before{background-color:#c0392b!important}
 .eyeStyle{cursor:pointer;font-size:x-large;opacity:50%}
 .eyeStyle:hover{opacity:100%;font-size:23px;transition:all .2s}
-.lightblue{color: #6ba8bd;}
-.hover{color: black;}
-.hover:hover{color: #6ba8bd;}
+.lightblue{color:#6ba8bd}
+.hover{color:#000}
+.hover:hover{color:#6ba8bd}
+.firstColor{background-color:#f686c2}
+.secret_btn{background:#f03f9d!important;color:#fff!important}
+.secret_btn:hover{background:#f561b0!important;color:#fff!important}
+.form-check-input{width:1.5em;height:1.5em;margin-top:.25em;background-color:#fff;background-repeat:no-repeat;background-size:contain;border:1px solid #f561b0;-webkit-appearance:none;-moz-appearance:none;appearance:none;-webkit-print-color-adjust:exact;color-adjust:exact}
+.form-check-input:checked{background-color:#f561b0;border-color:#f561b0}
+.form-check-input:focus{border-color:#f686c2;outline:0;box-shadow:0 0 0 .25rem rgb(246 134 194 / 25%)}
+.form-check .form-check-input{float:left;margin-left:0}
+.logoSize{height: 32px; width: 100%; padding-left: 5px;}
+.photoSize{height: 50em;width: auto;}
